--- a/custom_components/glance_clock/translations/en.json
+++ b/custom_components/glance_clock/translations/en.json
@@ -28,5 +28,32 @@
       "cannot_connect": "Cannot connect to device",
       "unknown": "Unknown error occurred"
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "Select Action",
+        "description": "Choose an action to perform.",
+        "menu_options": {
+          "calibration": "Start Calibration",
+          "clear_scenes": "Clear Scenes"
+        }
+      },
+      "calibration": {
+        "title": "Start Calibration",
+        "description": "This will start the calibration process. The watch hands will move to show their current alignment. If the hands stop at 11:59 instead of 12:00 when a green segment appears, this indicates the hands are mechanically misaligned and need adjustment.",
+        "submit": "Start Calibration"
+      },
+      "confirm_calibration": {
+        "title": "Calibration Complete",
+        "description": "The calibration process is complete. If the hands stopped at 11:59 (not aligned at 12:00), carefully remove the minute hand and reposition it to align straight at 12:00. Your watch hands should now be properly aligned.",
+        "submit": "Finish"
+      },
+      "clear_scenes": {
+        "title": "Clear Scenes",
+        "description": "Click Submit to clear all scenes. This action cannot be undone.",
+        "submit": "Clear Scenes"
+      }
+    }
   }
 }
